--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -10,6 +10,16 @@
     <img src="../images/pancakes.png" alt="pancake rolls" width="300">
     <h2>Description</h2> <!-- i suck at writing lol -->
     <p>While these pancakes may not be the fluffy ones you're used to, they are definitely worth a try.
-         </p>
+       This recipe is originally my grandmothers, who passed it down to my mother, who passed it down to me and now 
+       I am sharing it with you.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>400 grams flour</li>
+        <li>550 grams milk</li>
+        <li>4 tablespoons sugar</li>
+        <li>4 tablespoons sunflower-seed oil</li>
+        <li>½ teaspoon salt</li>
+        <li>2 eggs</li>
+    </ul>
 </body>
 </html>
