Add pancakes steps list

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -20,6 +20,19 @@
         <li>4 tablespoons sunflower-seed oil</li>
         <li>½ teaspoon salt</li>
         <li>2 eggs</li>
+        <li>1 tablespoon butter</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large bowl add the eggs, sugar, salt, oil and milk then mix</li>
+        <li>Slowly add flour to bowl while mixing. Do NOT add it all at once to prevent clumps.</li>
+        <li>In a nonstick pan over medium heat add butter and let it melt</li>
+        <li>Once the butter starts bubbling add pancake batter with a ladle to the pan</li>
+        <li>Once the top of the pancake is solid flip it over</li>
+        <li>Once both sides are a dark brown transfer to a plate</li>
+        <li>Repeat from step 4 util no more batter is left</li>
+
+    </ol>
+
 </body>
 </html>
