Add cozonac recipe page with ingredients list

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -33,6 +33,6 @@
         <li>Repeat from step 4 util no more batter is left</li>
 
     </ol>
-
+    <a href="../index.html">Back to homepage</a>
 </body>
 </html>
