--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/pancakes.html">Pancakes</a>
+    <br>
+    <a href="./recipes/cozonac.html">Cozonac</a>
 </body>
 </html>
