Add steps to cozonac recipe page

--- a/recipes/cozonac.html
+++ b/recipes/cozonac.html
@@ -33,6 +33,28 @@
         <li>1 tablespoon lemon juice</li>
         <li>1 teaspoon rum essence</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>All ingredients must be at room temperature. Except the milk and oil that we will heat</li>
+        <li>Sift the flour into a large bowl</li>
+        <li>Put 4-5 tablespoons of warm milk in a small bowl. Add a spoonful of sugar and crushed yeast over it.
+            We mix until they are melted. Then add 2 tablespoons of flour and incorporate it.</li>
+        <li>We cover the bowl with plastic wrap and a kitchen towel and leave it to ferment in a warm 
+            place for 10-15 minutes</li>
+        <li>Add the salt over the yolks and mix a little. We leave them aside, so the salt will
+             accentuate the color of the yolks.</li>
+        <li>We heat the milk until it is slightly hot. Then on top of it we add sugar and flavors (vanilla and rum). Mix very well until the sugar has melted. While mixing, the milk will cool down, just enough to be warm (30ºC).</li>
+        <li>We will make a hole in the bowl with the flour and then add the milk with the dissolved sugar and the flavors. We also put the milk and yeast mixture, which has grown very well in the meantime, and the egg yolks. Mix with a fork in a circular way to incorporate the flour.</li>
+        <li>The resulting dough will be very sticky, so now we have to start gradually adding the warm oil while continuing to knead. Add a little oil, knead until incorporated and then add again. This process may take 10-12 minutes.</li>
+        <li>If at the end you see that the dough is still sticking to your hands, add 2-3 tablespoons of oil and knead. Then we form it into a ball and place it in the bowl. We cover the dough with plastic wrap and some kitchen towels to maintain the temperature inside. That way it will grow faster. This will take about 1 hour.</li>
+        <li>While the dough is rising, prepare the filling. Beat the egg whites together with the powdered sugar and lemon juice. Then we add the sifted cocoa on top of them and incorporate it with a spatula. Add the ground walnut and incorporate it. Optionally, we can add a rum essence, it will give it a very good taste.</li>
+        <li>We remove the dough from the bowl onto the work table greased with a little oil. If necessary, we also grease our hands with oil. We fold the dough several times, so we will remove the air on one side and insert it on the other side. With this procedure, the cozonac will come out very fluffy. Then we divide the dough into 2 equal parts. We put one of them on the work table and put the other one back in the bowl and cover it with a towel. We divide the other part into 2 other parts.</li>
+        <li>Grease the table with oil and stretch each part of the dough by hand into a rectangular sheet with the same length as the tray in which we will bake the cozonac's. The thickness of the sheet should be about one finger or 1 cm.</li>
+        <li>Put a quarter of the filling on top. Then we start rolling the dough to close it. We seal it well at the bottom and at both ends. Put aside the first sheet and do the same with the second one. Then we braid the bun. We join the two strips obtained at one end, after which we twist it 3-4 times. We also seal it at the other end, after which we put it in a tray lined with baking paper.</li>
+        <li>We do the same with the second cozonac. We leave them to grow for another 30 minutes. During this time, preheat the oven to 170ºC with top and bottom heat.</li>
+        <li>Then we grease the cozonac's with the egg yolks, in which we also put a spoonful of milk.</li>
+        <li>We put them in the oven for about 50-55 minutes or until they are brown. After 50 minutes you can try them with a toothpick. If you see that they have browned before time, you can cover them with aluminum foil. When they are ready, we take them out of the oven and leave them in the pan for about 10 minutes and then we can take them out on a wire rack to cool completely. Then they can be cut and enjoyed.</li>
+    </ol>
     <br>
     <a href="../index.html">Back to homepage</a>
 </body>
