Add confit recipe page with ingredients list

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="./recipes/pancakes.html">Pancakes</a>
     <br>
     <a href="./recipes/cozonac.html">Cozonac</a>
+    <br>
+    <a href="./recipes/confit-byaldi.html">Confit Byaldi</a>
 </body>
 </html>
