--- a/recipes/cozonac.html
+++ b/recipes/cozonac.html
@@ -17,7 +17,7 @@
     <ul>
         <li>5 cups flour </li>
         <li>1 cup sugar</li>
-        <li>½ cup oil</li>
+        <li>1/2 cup oil</li>
         <li>50 grams fresh yeast</li>
         <li>5 egg yolks</li>
         <li>1 tablespoon vanilla essence</li>
