--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -18,7 +18,7 @@
         <li>550 grams milk</li>
         <li>4 tablespoons sugar</li>
         <li>4 tablespoons sunflower-seed oil</li>
-        <li>½ teaspoon salt</li>
+        <li>1/2 teaspoon salt</li>
         <li>2 eggs</li>
         <li>1 tablespoon butter</li>
     </ul>
