Add a little bit of rizz

--- a/recipes/cozonac.html
+++ b/recipes/cozonac.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/recipe.css">
     <title>Cozonac</title>
 </head>
 <body>
@@ -56,6 +57,6 @@
         <li>We put them in the oven for about 50-55 minutes or until they are brown. After 50 minutes you can try them with a toothpick. If you see that they have browned before time, you can cover them with aluminum foil. When they are ready, we take them out of the oven and leave them in the pan for about 10 minutes and then we can take them out on a wire rack to cool completely. Then they can be cut and enjoyed.</li>
     </ol>
     <br>
-    <a href="../index.html">Back to homepage</a>
+    <a class="homepage-return" href="../index.html">Back to homepage</a>
 </body>
 </html>
