--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../style/recipe.css">
+    <title>Pancakes</title>
 </head>
 <body>
     <h1>Pancakes</h1>
-    <img src="../images/pancakes.png" alt="pancake rolls" width="300">
+    <img src="../images/pancakes.png" alt="pancake rolls">
     <h2>Description</h2> <!-- i suck at writing lol -->
     <p>While these pancakes may not be the fluffy ones you're used to, they are definitely worth a try.
        This recipe is originally my grandmothers, who passed it down to my mother, who passed it down to me and now 
@@ -33,6 +34,8 @@
         <li>Repeat from step 4 util no more batter is left</li>
 
     </ol>
-    <a href="../index.html">Back to homepage</a>
+    <div class="homepage-link">
+        <a class="homepage-return" href="../index.html" stye="text-align: center;">Back to homepage</a>
+    </div>
 </body>
 </html>
