--- a/recipes/confit-byaldi.html
+++ b/recipes/confit-byaldi.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/recipe.css">
     <title>Confit Byaldi</title>
 </head>
 <body>
     <h1>Confit Byaldi</h1>
-    <img src="../images/confit-byaldi.jpg" width="300">
+    <img src="../images/confit-byaldi.jpg">
     <h2>Description</h2>
     <p>Confit Byaldi is a dish made of thinly sliced and stacked vegetables</p>
+    <!--https://www.bingingwithbabish.com/recipes/2017/5/5/ratatouille-->
     <h2>Ingredients</h2>
     <ul>
         <li>6 large roma tomatoes, divided</li>
@@ -30,11 +32,12 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Cut a small “X” into the bottom of 4 of the roma tomatoes, and prepare both a pot of boiling water and a large bowl of ice water.  Blanch the tomatoes for less than one minute, until cuts just begin to split up the sides of the tomatoes.  Remove immediately and place in the ice bath, and allow to cool completely.  Set aside.</li>\
+        <li>Cut a small “X” into the bottom of 4 of the roma tomatoes, and prepare both a pot of boiling water and a large bowl of ice water.  Blanch the tomatoes for less than one minute, until cuts just begin to split up the sides of the tomatoes.  Remove immediately and place in the ice bath, and allow to cool completely.  Set aside.</li>
         <li>Set a large stovetop gas burner to high, and place two bell peppers directly on the grate over the flame.  Allow to char completely before flipping, and blackening on all sides.  Remove from heat and cover with tin foil for about 5 minutes, until softened.  Peel off skins and place in a high-powered blender or food processor, along with remaining tomatoes, the picked leaves of one rosemary sprig, thyme, garlic, onion, vegetable stock, water, and 1 tablespoon olive oil.  Blend on high speed until completely smooth.</li>
         <li>Preheat oven to 225°F.  Using a very sharp knife, cut tomatoes into 1/8-inch thick slices, and place on a parchment-lined baking sheet.  Using a mandolin, slice squash and eggplants into 1/8-inch thick slices, and stack on the baking sheet.  In a shallow roaster or casserole, pour a thin layer of the roast pepper mixture, and spread evenly.  Begin shingling vegetables on top: eggplant, followed by tomato, yellow squash, and green squash - continuing the pattern around the edge of the roaster, letting each slice stick out less than 1/4-inch from underneath the following slice.  Once the outside of the roaster has been lined with vegetables, repeat another layer inside, and continue until roaster is filled with patterned vegetables.  Finely chop remaining rosemary, and sprinkle over top with 1 tablespoon olive oil, salt, and pepper.  Cut a piece of parchment paper to the size of the roaster, place on top of vegetables.  Roast for 90 minutes, removing the parchment paper during the final 20 minutes of cooking.</li>
         <li>Once vegetables are completely softened but still hold their shape, remove from the oven.  Place a ring mold in the center of a large plate, and fill widthwise with vegetables stacked vertically.  Place a layer of vegetables staggered horizontally over top, and slowly remove ring mold.  Combine 1 tablespoon of the red pepper sauce from the bottom of the roaster with remaining olive oil, and drizzle in a circle around the outside of the vegetable stack.  Garnish with torn parsley and serve.</li>
     </ol>
+    <a class="homepage-return" href="../index.html">Back to homepage</a>
 </body>
 </html>
 
