Center homepage links

--- a/recipes/confit-byaldi.html
+++ b/recipes/confit-byaldi.html
@@ -37,7 +37,9 @@
         <li>Preheat oven to 225°F.  Using a very sharp knife, cut tomatoes into 1/8-inch thick slices, and place on a parchment-lined baking sheet.  Using a mandolin, slice squash and eggplants into 1/8-inch thick slices, and stack on the baking sheet.  In a shallow roaster or casserole, pour a thin layer of the roast pepper mixture, and spread evenly.  Begin shingling vegetables on top: eggplant, followed by tomato, yellow squash, and green squash - continuing the pattern around the edge of the roaster, letting each slice stick out less than 1/4-inch from underneath the following slice.  Once the outside of the roaster has been lined with vegetables, repeat another layer inside, and continue until roaster is filled with patterned vegetables.  Finely chop remaining rosemary, and sprinkle over top with 1 tablespoon olive oil, salt, and pepper.  Cut a piece of parchment paper to the size of the roaster, place on top of vegetables.  Roast for 90 minutes, removing the parchment paper during the final 20 minutes of cooking.</li>
         <li>Once vegetables are completely softened but still hold their shape, remove from the oven.  Place a ring mold in the center of a large plate, and fill widthwise with vegetables stacked vertically.  Place a layer of vegetables staggered horizontally over top, and slowly remove ring mold.  Combine 1 tablespoon of the red pepper sauce from the bottom of the roaster with remaining olive oil, and drizzle in a circle around the outside of the vegetable stack.  Garnish with torn parsley and serve.</li>
     </ol>
-    <a class="homepage-return" href="../index.html">Back to homepage</a>
+    <div class="homepage-link">
+        <a class="homepage-return" href="../index.html" stye="text-align: center;">Back to homepage</a>
+    </div>
 </body>
 </html>
 
