--- a/recipes/cozonac.html
+++ b/recipes/cozonac.html
@@ -56,7 +56,8 @@
         <li>Then we grease the cozonac's with the egg yolks, in which we also put a spoonful of milk.</li>
         <li>We put them in the oven for about 50-55 minutes or until they are brown. After 50 minutes you can try them with a toothpick. If you see that they have browned before time, you can cover them with aluminum foil. When they are ready, we take them out of the oven and leave them in the pan for about 10 minutes and then we can take them out on a wire rack to cool completely. Then they can be cut and enjoyed.</li>
     </ol>
-    <br>
-    <a class="homepage-return" href="../index.html">Back to homepage</a>
+    <div class="homepage-link">
+        <a class="homepage-return" href="../index.html" stye="text-align: center;">Back to homepage</a>
+    </div>  
 </body>
 </html>
